# PerfectShot

./: .gitignore
.github/workflows/: build-windows.yml  release.yml
docs/: detection-duration-analysis.md
frontend/: index.html  package-lock.json  package.json  tsconfig.worker.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CameraView.tsx  DemoView.tsx  UpdateNotification.tsx
frontend/src/hooks/: useCamera.ts  useFrameCapture.ts  useUpdater.ts
frontend/src/workers/: detector.worker.ts
src-tauri/: Cargo.toml  package.json  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/detector/: eye_score.rs  face.rs  landmark.rs  mod.rs
